Added trackAddToCart and trackRemoveFromCart events (#97)
Added further Intern unit tests (#76) (TODO)
Added social tracking features (#12)
Improved efficiency of enableLinkClickTracking (#254)
Integrated the Tracker Core (#255)
Removed deprecated trackImpression method (#256)
Added forceSecureTracker boolean option to the argmap, thanks @kujo4pmZ! (#247)

Version 2.0.1 (2014-10-12)
--------------------------
Made error logging compatible with Internet Explorer (#264)
Fixed SauceLabs red status (#235)

Version 2.0.0 (2014-07-03)
--------------------------
Moved fixUpUrl into its own file, called lib/proxies.js (#112)
Fixed duplication of querystring parameter lookup (#111)
Added tests for helpers.js (#96)
Added tests for detectors.js (#95)
Replaced cookie.js with browser-cookie-lite (#88)
Added ad conversion tracking (#60)
Added ad click tracking (#59)
Added initial localStorage support for intermittent offline beacons, thanks @rcs! (#24)
Added new trackAdImpression, mapping to unstructured event (#13)
Removed references to referral cookie (#118)
Implemented enableLinkTracking support (#51)
Replaced hard-coded version with template value (#120)
Added Sauce Labs small button at top of README (#123)
Added Sauce full test summary widget (long bar) at bottom of README (#124)
Added support for namespacing (#4)
Passed tracker namespace through to collector in Tracker Protocol (#126)
Moved to argmap-style tracker creation with 'newTracker' (#132)
Added support for cookie namespacing (#131)
Added new tag which allows queue to be renamed (#130)
Started rigorously checking whether a page is cached by Yahoo (#142)
Upgraded Intern to 1.5.0 (#119)
Fixed link to code climate button in README.md (#149)
Added examples of tracker namespacing (#159)
Split async.html into async-small.html, async-medium.html (#160)
Linked the Technical Docs and Setup Guide images to the appropriate pages (#164)
Made JS invocation tag part of the build process (#158)